[package]
name = "identify_unused_iam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.13.0"
aws-sdk-iam = "0.13.0"
aws-smithy-types = "0.43.0"
csv = "1"
eyre = "0.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
time = "0.3"
tokio = { version = "1", features = ["full"] }
